--- a/Test/Nav var/navbar.html
+++ b/Test/Nav var/navbar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="navbar.css">
+    <script src="active.js" defer></script>
     <title>Nav bar</title>
     <script src="https://kit.fontawesome.com/0b51e7d6ff.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
