--- a/Test/Test shopping mall main/mall.html
+++ b/Test/Test shopping mall main/mall.html
@@ -9,18 +9,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="main">        
-        <div class="logo">
-            <i class="fas fa-box"></i>
-            <a href="">Shopping Mall</a>
-        </div>
-
+    <div class="logo">
+        <i class="fas fa-box"></i>
+        <a href="">Shopping Mall</a>
+    </div>
+    
+    <div class="main">
         <ul class="menu">
-            <li><a href = "">Home</a></li>
+            <li><a href = "http://127.0.0.1:5500/Test/Test%20shopping%20mall%20main/mall.html">Home</a></li>
             <li><a href = "">Community</a></li>
             <li><a href = "">My Page</a></li>
-            <li><a href = "">Login</a></li>
+            <li><a href = "http://127.0.0.1:5500/Test/Test%20shopping%20mall%20main/login.html">Login</a></li>
         </ul>
-    </nav>
+    </div>
+
+    <div class="adv">
+        <h5>국가는 법률이 정하는 바에 의하여 재외국민을 보호할 의무를 진다. 이 헌법시행 당시의 법령과 조약은 이 헌법에 위배되지 아니하는 한 그 효력을 지속한다. 국가의 세입·세출의 결산, 국가 및 법률이 정한 단체의 회계검사와 행정기관 및 공무원의 직무에 관한 감찰을 하기 위하여 대통령 소속하에 감사원을 둔다. 대통령은 국무총리·국무위원·행정각부의 장 기타 법률이 정하는 공사의 직을 겸할 수 없다. 법률이 헌법에 위반되는 여부가 재판의 전제가 된 경우에는 법원은 헌법재판소에 제청하여 그 심판에 의하여 재판한다. 국가는 여자의 복지와 권익의 향상을 위하여 노력하여야 한다. 모든 국민은 양심의 자유를 가진다.</h5>
+        <h5>대통령은 법률에서 구체적으로 범위를 정하여 위임받은 사항과 법률을 집행하기 위하여 필요한 사항에 관하여 대통령령을 발할 수 있다. 위원은 정당에 가입하거나 정치에 관여할 수 없다. 훈장등의 영전은 이를 받은 자에게만 효력이 있고, 어떠한 특권도 이에 따르지 아니한다. 지방자치단체는 주민의 복리에 관한 사무를 처리하고 재산을 관리하며, 법령의 범위안에서 자치에 관한 규정을 제정할 수 있다. 대통령은 조약을 체결·비준하고, 외교사절을 신임·접수 또는 파견하며, 선전포고와 강화를 한다. 중앙선거관리위원회는 법령의 범위안에서 선거관리·국민투표관리 또는 정당사무에 관한 규칙을 제정할 수 있으며, 법률에 저촉되지 아니하는 범위안에서 내부규율에 관한 규칙을 제정할 수 있다.</h5>
+        <h5>국정감사 및 조사에 관한 절차 기타 필요한 사항은 법률로 정한다. 국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다. 국가는 농지에 관하여 경자유전의 원칙이 달성될 수 있도록 노력하여야 하며, 농지의 소작제도는 금지된다. 모든 국민은 거주·이전의 자유를 가진다. 대법원은 법률에 저촉되지 아니하는 범위안에서 소송에 관한 절차, 법원의 내부규율과 사무처리에 관한 규칙을 제정할 수 있다. 모든 국민은 주거의 자유를 침해받지 아니한다. 주거에 대한 압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을 제시하여야 한다. 헌법에 의하여 체결·공포된 조약과 일반적으로 승인된 국제법규는 국내법과 같은 효력을 가진다.</h5>
+        <h5>국정감사 및 조사에 관한 절차 기타 필요한 사항은 법률로 정한다. 국민의 자유와 권리는 헌법에 열거되지 아니한 이유로 경시되지 아니한다. 국가는 농지에 관하여 경자유전의 원칙이 달성될 수 있도록 노력하여야 하며, 농지의 소작제도는 금지된다. 모든 국민은 거주·이전의 자유를 가진다. 대법원은 법률에 저촉되지 아니하는 범위안에서 소송에 관한 절차, 법원의 내부규율과 사무처리에 관한 규칙을 제정할 수 있다. 모든 국민은 주거의 자유를 침해받지 아니한다. 주거에 대한 압수나 수색을 할 때에는 검사의 신청에 의하여 법관이 발부한 영장을 제시하여야 한다. 헌법에 의하여 체결·공포된 조약과 일반적으로 승인된 국제법규는 국내법과 같은 효력을 가진다.</h5>
+    </div>
 </body>
 </html>
