--- a/WishList/main.html
+++ b/WishList/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="menuBar.css">
+    <link rel="stylesheet" href="main_style.css">
     <script src="active.js" defer></script>
     <link rel="shortcut icon" href="images/myWISHLIST.png">
     <title>WishList</title>
@@ -14,13 +14,13 @@
     <nav class="menubar">
         <div class="logo">
             <i class="fas fa-gifts"></i>
-            <a href="http://127.0.0.1:5500/menuBar/menuBar.html">WishList</a>
+            <a href="http://127.0.0.1:5500/WishList/menuBar.html">WishList</a>
         </div>
 
         <ul class="menu">
             <li><a href="">About</a></li>
             <li><a href="">QnA</a></li>
-            <li><a href="http://127.0.0.1:5500/menuBar/login.html">Log-in</a></li>
+            <li><a href="http://127.0.0.1:5500/WishList/login.html">Log-in</a></li>
         </ul>
 
         <a href="#" class="toggle">
