--- a/WishList/sign up.html
+++ b/WishList/sign up.html
@@ -14,7 +14,7 @@
     <nav class="menubar">
         <div class="logo">
             <i class="fas fa-gifts"></i>
-            <a href="http://127.0.0.1:5500/WishList/menuBar.html">WishList</a>
+            <a href="http://127.0.0.1:5500/WishList/main.html">WishList</a>
         </div>
 
         <ul class="menu">
