--- a/WishList/login.html
+++ b/WishList/login.html
@@ -39,12 +39,14 @@
             <a href="">LEE.J.H</a></li>
     </ul>
 
-    <div class="login">
-        <h4>Log-in</h4>
-        <input type="text" name="id" placeholder="ID"><br>
-        <input type="password" name="pw" placeholder="PASSWORD"><br>
-        <input type="submit" name="login" value="LOG-IN">
-    </div>
+    <form action="" method="POST">
+        <div class="login">
+            <h3>Log-in</h3>
+            <input type="text" name="id" placeholder="ID"><br>
+            <input type="password" name="pw" placeholder="PASSWORD"><br>
+            <input type="submit" name="login" value="LOG-IN">
+        </div>
+    </form>
 
     <div class="register">
         <h4>If you haven't yet signed up with WishList, create your account now!</h4>
