--- a/WishList/login.html
+++ b/WishList/login.html
@@ -14,13 +14,13 @@
     <nav class="menubar">
         <div class="logo">
             <i class="fas fa-gifts"></i>
-            <a href="http://127.0.0.1:5500/WishList/main.html">WishList</a>
+            <a href="http://jhoon.dothome.co.kr/WishList/main.html">WishList</a>
         </div>
 
         <ul class="menu">
             <li><a href="">About</a></li>
             <li><a href="">QnA</a></li>
-            <li><a href="http://127.0.0.1:5500/WishList/login.html">Log-in</a></li>
+            <li><a href="http://jhoon.dothome.co.kr/WishList/login.html">Log-in</a></li>
         </ul>
 
         <a href="#" class="toggle">
@@ -50,7 +50,7 @@
 
     <div class="register">
         <h4>If you haven't yet signed up with WishList, create your account now!</h4>
-        <a href="http://127.0.0.1:5500/WishList/sign%20up.html">SIGN UP NOW</a></li>
+        <a href="http://jhoon.dothome.co.kr/WishList/sign%20up.html">SIGN UP NOW</a></li>
     </div>
 
 </body>
