--- a/WishList/sign up.html
+++ b/WishList/sign up.html
@@ -14,13 +14,13 @@
     <nav class="menubar">
         <div class="logo">
             <i class="fas fa-gifts"></i>
-            <a href="http://127.0.0.1:5500/WishList/main.html">WishList</a>
+            <a href="http://jhoon.dothome.co.kr/WishList/main.html">WishList</a>
         </div>
 
         <ul class="menu">
             <li><a href="">About</a></li>
             <li><a href="">QnA</a></li>
-            <li><a href="http://127.0.0.1:5500/WishList/login.html">Log-in</a></li>
+            <li><a href="http://jhoon.dothome.co.kr/WishList/login.html">Log-in</a></li>
         </ul>
 
         <a href="#" class="toggle">
