--- a/WishList/LEE.html
+++ b/WishList/LEE.html
@@ -52,7 +52,7 @@
                 <p>￦869,000</p>
             </li>
             <li>
-                <img src="images/6.jpg" alt="iPhone 6">
+                <img src="images/6.png" alt="iPhone 6">
                 <a href="">iPhone 6</a>
                 <p>￦789,800</p>
             </li>
