210210 : added the special ticket

--- a/WishList/LEE.html
+++ b/WishList/LEE.html
@@ -86,6 +86,11 @@
                 <a href="">Nike Phantom Vision</a>
                 <p>￦298,000</p>
             </li>
+            <li>
+                <img src="images/ticket.png" alt="Special Ticket">
+                <a href="">JaeHoon Land Ticket</a>
+                <p>￦1,000,000,000</p>
+            </li>
         </ul>
     </div>
 </body>
