210210 : added the special things

--- a/WishList/LEE.html
+++ b/WishList/LEE.html
@@ -89,6 +89,11 @@
             <li>
                 <img src="images/ticket.png" alt="Special Ticket">
                 <a href="">JaeHoon Land Ticket</a>
+                <p>￦100,000,000</p>
+            </li>
+            <li>
+                <img src="images/home.png" alt="Special Place">
+                <a href="">JaeHoon Land</a>
                 <p>￦1,000,000,000</p>
             </li>
         </ul>
