210212 : added tail on main page

--- a/WishList/LEE.html
+++ b/WishList/LEE.html
@@ -83,5 +83,12 @@
             </li>
         </ul>
     </div>
+
+    <div class="tail">
+        <p>숭실대학교 컴퓨터학부 | 김동형, 김시현, 김유림, 이재훈 | 서울특별시 동작구 상도로 369 숭실대학교 (우편번호 06978)</p>
+        <p>사업자 등록 번호 : 99-00-01-02 | 통신판매 신고번호 : 2020-서울동작구-2021</p>
+        <p>한국 지사 고객센터 : 010-2850-4250 | 아부다비 지사 고객센터 : 010-6766-1776</p>
+    </div>
+
 </body>
 </html>
