--- a/WishList/KKKL/DH.html
+++ b/WishList/KKKL/DH.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="LEE.css">
+    <link rel="stylesheet" href="KKKL.css">
     <script src="active.js" defer></script>
     <link rel="shortcut icon" href="images/myWISHLIST.png">
     <title>WishList : LEE.J.H</title>
@@ -42,44 +42,24 @@
     <div class="items">
         <ul>
             <li>
-                <img src="images/11 pro.jpg" alt="iPhone 11 pro">
-                <a href="">iPhone 11 pro</a>
-                <p>￦1,350,000</p>
+                <img src="../images/hong.png" alt="hongju">
+                <a href="">진도 홍주</a>
+                <p>￦41,000</p>
             </li>
             <li>
-                <img src="images/7.jpg" alt="iPhone 7">
-                <a href="">iPhone 7</a>
-                <p>￦869,000</p>
+                <img src="../images/gam.png" alt="gamhongro">
+                <a href="">관서 감홍로</a>
+                <p>￦75,000</p>
             </li>
             <li>
-                <img src="images/6.png" alt="iPhone 6">
-                <a href="">iPhone 6</a>
-                <p>￦789,800</p>
+                <img src="../images/ganggo.jpg" alt="eganggo">
+                <a href="">해서 이강고</a>
+                <p>￦32,500</p>
             </li>
             <li>
-                <img src="images/iPad.jpg" alt="iPad">
-                <a href="">iPad</a>
-                <p>￦1,290,000</p>
-            </li>
-            <li>
-                <img src="images/pencil.jpg" alt="Apple Pencil">
-                <a href="">Apple Pencil</a>
-                <p>￦165,000</p>
-            </li>
-            <li>
-                <img src="images/AirPod.jpg" alt="AirPod">
-                <a href="">AirPod</a>
-                <p>￦240,000</p>
-            </li>
-            <li>
-                <img src="images/ticket.png" alt="Special Ticket">
-                <a href="">JaeHoon Land Ticket</a>
-                <p>￦100,000,000</p>
-            </li>
-            <li>
-                <img src="images/home.png" alt="Special Place">
-                <a href="">JaeHoon Land</a>
-                <p>￦1,000,000,000</p>
+                <img src="../images/jook.jpg" alt="jookryukgo">
+                <a href="">정읍 죽력고</a>
+                <p>￦95,000</p>
             </li>
         </ul>
     </div>
