--- a/WishList/KKKL/DH.html
+++ b/WishList/KKKL/DH.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="KKKL.css">
     <script src="active.js" defer></script>
     <link rel="shortcut icon" href="images/myWISHLIST.png">
-    <title>WishList : LEE.J.H</title>
+    <title>WishList : KIM.D.H</title>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0b51e7d6ff.js" crossorigin="anonymous"></script>
 </head>
