--- a/WishList/order.html
+++ b/WishList/order.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="order_style.css">
     <script src="active.js" defer></script>
     <link rel="shortcut icon" href="images/myWISHLIST.png">
-    <title>WishList : Sign Up</title>
+    <title>WishList : Order / Payment</title>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0b51e7d6ff.js" crossorigin="anonymous"></script>
 </head>
